[package]
name = "openssl_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
hyper = { version = "0.14.2", features = ["full"] }
hyper-openssl = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
futures = "0.3"
futures-util = "0.3"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
